src/styles.css
#dice-box,
#dice-box canvas {
  position: fixed;
  pointer-events: none;
  z-index: 100;
  width: 100%;
  height: 100%;
}

.fade-out {
	opacity: 0;
	animation-name: fadeOutOpacity;
	animation-iteration-count: 1;
	animation-timing-function: ease-in;
	animation-duration: 5s;
}

@keyframes fadeOutOpacity {
	0% {
		opacity: 1;
	}
  60% {
    opacity: 1;
  }
	100% {
		opacity: 0;
	}
}

